<resources>
    <string name="app_name">Assignment</string>
    <string name="git_id">깃허브 아이디</string>
    <string name="git_pwd">깃허브 비밀번호</string>
    <string name="id_hint">깃허브 아이디를 입력해주세요.</string>
    <string name="pwd_hint">비밀번호를 입력해주세요.</string>
    <string name="name_hint">이름을 입력해주세요.</string>
    <string name="login">로그인</string>
    <string name="join">회원가입</string>
    <string name="name">이름</string>
    <string name="user_name">LeeYeongJu</string>
    <string name="instagram"><![CDATA[@]]>2zerozu</string>
    <string name="introduce">병아리 개발자</string>
    <string name="profile">프로필</string>
    <string name="camera">카메라</string>
    <string name="home">홈</string>
    <string name="follower">팔로워 목록</string>
    <string name="repository">레포지토리 목록</string>
    <string name="my_name">이영주</string>
    <string name="android">안드로이드</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>