<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/sopt_main_purple"/>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/notosanskr_bold"
        android:includeFontPadding="false"
        android:text="@string/user_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile" />

    <TextView
        android:id="@+id/instagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/notosanskr_regular"
        android:includeFontPadding="false"
        android:text="@string/instagram"
        android:textColor="@color/thesopt_lightgray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name" />

    <TextView
        android:id="@+id/introduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/notosanskr_regular"
        android:includeFontPadding="false"
        android:text="@string/introduce"
        android:textColor="@color/light_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instagram" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_follower"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/btn_selector"
            android:fontFamily="@font/notosanskr_regular"
            android:includeFontPadding="false"
            android:paddingVertical="13dp"
            android:text="@string/follower"
            android:textColor="@drawable/text_selector"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shape" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_repository"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="11dp"
            android:background="@drawable/btn_selector"
            android:fontFamily="@font/notosanskr_regular"
            android:includeFontPadding="false"
            android:paddingVertical="13dp"
            android:text="@string/repository"
            android:textColor="@drawable/text_selector"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shape" />


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fcv_profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_follower">
    </androidx.fragment.app.FragmentContainerView>


</androidx.constraintlayout.widget.ConstraintLayout>